spec/errors/core/no_such_message.lang
obj = Object.new()
obj.invalidSlot
